Calc/BisonIntro/demo.output
Grammar

    0 $accept: compileUnit $end

    1 compileUnit: compileUnit statement
    2            | statement
    3            | functionDefinition
    4            | compileUnit functionDefinition

    5 functionDefinition: FUNCTION IDENTIFIER '(' fargs ')' compoundStatement

    6 statement: expression ';'
    7          | ifstatement
    8          | whilestatement
    9          | compoundStatement
   10          | RETURN expression ';'

   11 ifstatement: IF '(' expression ')' statement
   12            | IF '(' expression ')' statement ELSE statement

   13 whilestatement: WHILE '(' expression ')' statement

   14 compoundStatement: '{' '}'
   15                  | '{' statementList '}'

   16 statementList: statementList statement
   17              | statement

   18 expression: NUMBER
   19           | IDENTIFIER
   20           | IDENTIFIER '(' ')'
   21           | IDENTIFIER '(' args ')'
   22           | expression PLUS expression
   23           | expression MINUS expression
   24           | expression DIV expression
   25           | expression MULT expression
   26           | PLUS expression
   27           | MINUS expression
   28           | '(' expression ')'
   29           | IDENTIFIER '=' expression
   30           | expression OR expression
   31           | expression AND expression
   32           | NOT expression
   33           | expression GT expression
   34           | expression GTE expression
   35           | expression LT expression
   36           | expression LTE expression
   37           | expression EQUAL expression
   38           | expression NEQUAL expression

   39 args: expression
   40     | args ',' expression

   41 fargs: IDENTIFIER
   42      | fargs ',' IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 11 12 13 20 21 28
')' (41) 5 11 12 13 20 21 28
',' (44) 40 42
';' (59) 6 10
'=' (61) 29
'{' (123) 14 15
'}' (125) 14 15
error (256)
NEQUAL (258) 38
EQUAL (259) 37
LTE (260) 36
LT (261) 35
GTE (262) 34
GT (263) 33
OR (264) 30
AND (265) 31
MINUS (266) 23 27
PLUS (267) 22 26
MULT (268) 25
DIV (269) 24
NOT (270) 32
NUMBER (271) 18
IDENTIFIER (272) 5 19 20 21 29 41 42
IF (273) 11 12
WHILE (274) 13
FUNCTION (275) 5
RETURN (276) 10
IFPREC (277)
ELSE (278) 12


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
compileUnit (32)
    on left: 1 2 3 4, on right: 0 1 4
functionDefinition (33)
    on left: 5, on right: 3 4
statement (34)
    on left: 6 7 8 9 10, on right: 1 2 11 12 13 16 17
ifstatement (35)
    on left: 11 12, on right: 7
whilestatement (36)
    on left: 13, on right: 8
compoundStatement (37)
    on left: 14 15, on right: 5 9
statementList (38)
    on left: 16 17, on right: 15 16
expression (39)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
    36 37 38, on right: 6 10 11 12 13 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38 39 40
args (40)
    on left: 39 40, on right: 21 40
fargs (41)
    on left: 41 42, on right: 5 42


State 0

    0 $accept: . compileUnit $end

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    FUNCTION    shift, and go to state 8
    RETURN      shift, and go to state 9
    '('         shift, and go to state 10
    '{'         shift, and go to state 11

    compileUnit         go to state 12
    functionDefinition  go to state 13
    statement           go to state 14
    ifstatement         go to state 15
    whilestatement      go to state 16
    compoundStatement   go to state 17
    expression          go to state 18


State 1

   27 expression: MINUS . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 19


State 2

   26 expression: PLUS . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 20


State 3

   32 expression: NOT . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 21


State 4

   18 expression: NUMBER .

    $default  reduce using rule 18 (expression)


State 5

   19 expression: IDENTIFIER .
   20           | IDENTIFIER . '(' ')'
   21           | IDENTIFIER . '(' args ')'
   29           | IDENTIFIER . '=' expression

    '='  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 19 (expression)


State 6

   11 ifstatement: IF . '(' expression ')' statement
   12            | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 24


State 7

   13 whilestatement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 25


State 8

    5 functionDefinition: FUNCTION . IDENTIFIER '(' fargs ')' compoundStatement

    IDENTIFIER  shift, and go to state 26


State 9

   10 statement: RETURN . expression ';'

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 27


State 10

   28 expression: '(' . expression ')'

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 28


State 11

   14 compoundStatement: '{' . '}'
   15                  | '{' . statementList '}'

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    RETURN      shift, and go to state 9
    '('         shift, and go to state 10
    '{'         shift, and go to state 11
    '}'         shift, and go to state 29

    statement          go to state 30
    ifstatement        go to state 15
    whilestatement     go to state 16
    compoundStatement  go to state 17
    statementList      go to state 31
    expression         go to state 18


State 12

    0 $accept: compileUnit . $end
    1 compileUnit: compileUnit . statement
    4            | compileUnit . functionDefinition

    $end        shift, and go to state 32
    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    FUNCTION    shift, and go to state 8
    RETURN      shift, and go to state 9
    '('         shift, and go to state 10
    '{'         shift, and go to state 11

    functionDefinition  go to state 33
    statement           go to state 34
    ifstatement         go to state 15
    whilestatement      go to state 16
    compoundStatement   go to state 17
    expression          go to state 18


State 13

    3 compileUnit: functionDefinition .

    $default  reduce using rule 3 (compileUnit)


State 14

    2 compileUnit: statement .

    $default  reduce using rule 2 (compileUnit)


State 15

    7 statement: ifstatement .

    $default  reduce using rule 7 (statement)


State 16

    8 statement: whilestatement .

    $default  reduce using rule 8 (statement)


State 17

    9 statement: compoundStatement .

    $default  reduce using rule 9 (statement)


State 18

    6 statement: expression . ';'
   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 35
    EQUAL   shift, and go to state 36
    LTE     shift, and go to state 37
    LT      shift, and go to state 38
    GTE     shift, and go to state 39
    GT      shift, and go to state 40
    OR      shift, and go to state 41
    AND     shift, and go to state 42
    MINUS   shift, and go to state 43
    PLUS    shift, and go to state 44
    MULT    shift, and go to state 45
    DIV     shift, and go to state 46
    ';'     shift, and go to state 47


State 19

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   27           | MINUS expression .
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    MULT  shift, and go to state 45
    DIV   shift, and go to state 46

    $default  reduce using rule 27 (expression)


State 20

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   26           | PLUS expression .
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    MULT  shift, and go to state 45
    DIV   shift, and go to state 46

    $default  reduce using rule 26 (expression)


State 21

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   32           | NOT expression .
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    $default  reduce using rule 32 (expression)


State 22

   29 expression: IDENTIFIER '=' . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 48


State 23

   20 expression: IDENTIFIER '(' . ')'
   21           | IDENTIFIER '(' . args ')'

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10
    ')'         shift, and go to state 49

    expression  go to state 50
    args        go to state 51


State 24

   11 ifstatement: IF '(' . expression ')' statement
   12            | IF '(' . expression ')' statement ELSE statement

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 52


State 25

   13 whilestatement: WHILE '(' . expression ')' statement

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 53


State 26

    5 functionDefinition: FUNCTION IDENTIFIER . '(' fargs ')' compoundStatement

    '('  shift, and go to state 54


State 27

   10 statement: RETURN expression . ';'
   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 35
    EQUAL   shift, and go to state 36
    LTE     shift, and go to state 37
    LT      shift, and go to state 38
    GTE     shift, and go to state 39
    GT      shift, and go to state 40
    OR      shift, and go to state 41
    AND     shift, and go to state 42
    MINUS   shift, and go to state 43
    PLUS    shift, and go to state 44
    MULT    shift, and go to state 45
    DIV     shift, and go to state 46
    ';'     shift, and go to state 55


State 28

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   28           | '(' expression . ')'
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 35
    EQUAL   shift, and go to state 36
    LTE     shift, and go to state 37
    LT      shift, and go to state 38
    GTE     shift, and go to state 39
    GT      shift, and go to state 40
    OR      shift, and go to state 41
    AND     shift, and go to state 42
    MINUS   shift, and go to state 43
    PLUS    shift, and go to state 44
    MULT    shift, and go to state 45
    DIV     shift, and go to state 46
    ')'     shift, and go to state 56


State 29

   14 compoundStatement: '{' '}' .

    $default  reduce using rule 14 (compoundStatement)


State 30

   17 statementList: statement .

    $default  reduce using rule 17 (statementList)


State 31

   15 compoundStatement: '{' statementList . '}'
   16 statementList: statementList . statement

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    RETURN      shift, and go to state 9
    '('         shift, and go to state 10
    '{'         shift, and go to state 11
    '}'         shift, and go to state 57

    statement          go to state 58
    ifstatement        go to state 15
    whilestatement     go to state 16
    compoundStatement  go to state 17
    expression         go to state 18


State 32

    0 $accept: compileUnit $end .

    $default  accept


State 33

    4 compileUnit: compileUnit functionDefinition .

    $default  reduce using rule 4 (compileUnit)


State 34

    1 compileUnit: compileUnit statement .

    $default  reduce using rule 1 (compileUnit)


State 35

   38 expression: expression NEQUAL . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 59


State 36

   37 expression: expression EQUAL . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 60


State 37

   36 expression: expression LTE . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 61


State 38

   35 expression: expression LT . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 62


State 39

   34 expression: expression GTE . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 63


State 40

   33 expression: expression GT . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 64


State 41

   30 expression: expression OR . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 65


State 42

   31 expression: expression AND . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 66


State 43

   23 expression: expression MINUS . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 67


State 44

   22 expression: expression PLUS . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 68


State 45

   25 expression: expression MULT . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 69


State 46

   24 expression: expression DIV . expression

    MINUS       shift, and go to state 1
    PLUS        shift, and go to state 2
    NOT         shift, and go to state 3
    NUMBER      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 10

    expression  go to state 70


State 47

    6 statement: expression ';' .

    $default  reduce using rule 6 (statement)


State 48

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   29           | IDENTIFIER '=' expression .
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 35
    EQUAL   shift, and go to state 36
    LTE     shift, and go to state 37
    LT      shift, and go to state 38
    GTE     shift, and go to state 39
    GT      shift, and go to state 40
    OR      shift, and go to state 41
    AND     shift, and go to state 42
    MINUS   shift, and go to state 43
    PLUS    shift, and go to state 44
    MULT    shift, and go to state 45
    DIV     shift, and go to state 46

    $default  reduce using rule 29 (expression)


State 49

   20 expression: IDENTIFIER '(' ')' .

    $default  reduce using rule 20 (expression)


State 50

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression
   39 args: expression .

    NEQUAL  shift, and go to state 35
    EQUAL   shift, and go to state 36
    LTE     shift, and go to state 37
    LT      shift, and go to state 38
    GTE     shift, and go to state 39
    GT      shift, and go to state 40
    OR      shift, and go to state 41
    AND     shift, and go to state 42
    MINUS   shift, and go to state 43
    PLUS    shift, and go to state 44
    MULT    shift, and go to state 45
    DIV     shift, and go to state 46

    $default  reduce using rule 39 (args)


State 51

   21 expression: IDENTIFIER '(' args . ')'
   40 args: args . ',' expression

    ')'  shift, and go to state 71
    ','  shift, and go to state 72


State 52

   11 ifstatement: IF '(' expression . ')' statement
   12            | IF '(' expression . ')' statement ELSE statement
   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 35
    EQUAL   shift, and go to state 36
    LTE     shift, and go to state 37
    LT      shift, and go to state 38
    GTE     shift, and go to state 39
    GT      shift, and go to state 40
    OR      shift, and go to state 41
    AND     shift, and go to state 42
    MINUS   shift, and go to state 43
    PLUS    shift, and go to state 44
    MULT    shift, and go to state 45
    DIV     shift, and go to state 46
    ')'     shift, and go to state 73


State 53

   13 whilestatement: WHILE '(' expression . ')' statement
   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 35
    EQUAL   shift, and go to state 36
    LTE     shift, and go to state 37
    LT      shift, and go to state 38
    GTE     shift, and go to state 39
    GT      shift, and go to state 40
    OR      shift, and go to state 41
    AND     shift, and go to state 42
    MINUS   shift, and go to state 43
    PLUS    shift, and go to state 44
    MULT    shift, and go to state 45
    DIV     shift, and go to state 46
    ')'     shift, and go to state 74


State 54

    5 functionDefinition: FUNCTION IDENTIFIER '(' . fargs ')' compoundStatement

    IDENTIFIER  shift, and go to state 75

    fargs  go to state 76


State 55

   10 statement: RETURN expression ';' .

    $default  reduce using rule 10 (statement)


State 56

   28 expression: '(' expression ')' .

    $default  reduce using rule 28 (expression)


State 57

   15 compoundStatement: '{' statementList '}' .

    $default  reduce using rule 15 (compoundStatement)


State 58

   16 statementList: statementList statement .

    $default  reduce using rule 16 (statementList)


State 59

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression
   38           | expression NEQUAL expression .

    OR     shift, and go to state 41
    AND    shift, and go to state 42
    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 38 (expression)


State 60

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   37           | expression EQUAL expression .
   38           | expression . NEQUAL expression

    OR     shift, and go to state 41
    AND    shift, and go to state 42
    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 37 (expression)


State 61

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   36           | expression LTE expression .
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    OR     shift, and go to state 41
    AND    shift, and go to state 42
    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 36 (expression)


State 62

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   35           | expression LT expression .
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    OR     shift, and go to state 41
    AND    shift, and go to state 42
    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 35 (expression)


State 63

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   34           | expression GTE expression .
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    OR     shift, and go to state 41
    AND    shift, and go to state 42
    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 34 (expression)


State 64

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   33           | expression . GT expression
   33           | expression GT expression .
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    OR     shift, and go to state 41
    AND    shift, and go to state 42
    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 33 (expression)


State 65

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   30           | expression OR expression .
   31           | expression . AND expression
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    AND    shift, and go to state 42
    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    $default  reduce using rule 30 (expression)


State 66

   22 expression: expression . PLUS expression
   23           | expression . MINUS expression
   24           | expression . DIV expression
   25           | expression . MULT expression
   30           | expression . OR expression
   31           | expression . AND expression
   31           | expression AND expression .
   33           | expression . GT expression
   34           | expression . GTE expression
   35           | expression . LT expression
   36           | expression . LTE expression
   37           | expression . EQUAL expression
   38           | expression . NEQUAL expression

    MINUS  shift, and go to state 43
    PLUS   shift, and go to state 44
    MULT   shift, and go to state 45
    DIV    shift, and go to state 46

    $default  reduce using rule 31 (expression)


State 67

